se sube desarrollo de usps

--- a/templates/login/auth-signin-basic.html.twig
+++ b/templates/login/auth-signin-basic.html.twig
@@ -2,105 +2,104 @@
 
 {% block body %}
 
-    <div class="auth-page-wrapper pt-5">
-        <!-- auth page bg -->
-        <div class="auth-one-bg-position auth-one-bg" id="auth-particles">
-            <div class="bg-overlay"></div>
+<div class="auth-page-wrapper pt-5">
+    <!-- auth page bg -->
+    <div class="auth-one-bg-position auth-one-bg" id="auth-particles">
+        <div class="bg-overlay"></div>
 
-            <div class="shape">
-                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                     viewBox="0 0 1440 120">
-                    <path d="M 0,36 C 144,53.6 432,123.2 720,124 C 1008,124.8 1296,56.8 1440,40L1440 140L0 140z"></path>
-                </svg>
-            </div>
+        <div class="shape">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 1440 120">
+                <path d="M 0,36 C 144,53.6 432,123.2 720,124 C 1008,124.8 1296,56.8 1440,40L1440 140L0 140z"></path>
+            </svg>
         </div>
-
-        <!-- auth page content -->
-        <div class="auth-page-content">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-8 col-lg-6 col-xl-4">
-                        <div class="card" style="margin-top: 8rem">
-
-                            <div class="card-body p-4">
-                                <div class="p-2">
-
-                                    {% if error %}
-                                        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                    {% endif %}
-
-                                    <form action="{{ path('app_login') }}" method="post">
-
-                                        <div class="mb-3">
-                                            <label for="username" class="form-label">Username</label>
-                                            <input type="text" class="form-control" name="_username" id="username"
-                                                   autofocus autocomplete="off" placeholder="Enter username"
-                                                   value="{{ last_username }}">
-                                        </div>
-
-                                        <div class="mb-3">
-                                            <label class="form-label" for="password-input">Password</label>
-                                            <div class="position-relative auth-pass-inputgroup mb-3">
-                                                <input type="password" class="form-control pe-5 password-input"
-                                                       placeholder="Enter password" id="password-input"
-                                                       name="_password">
-                                                <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
-                                                        type="button" id="password-addon"><i
-                                                            class="ri-eye-fill align-middle"></i></button>
-                                            </div>
-                                        </div>
-
-                                        <input type="hidden" name="_csrf_token"
-                                               value="{{ csrf_token('authenticate') }}">
-
-                                        <div class="mt-4">
-                                            <button class="btn btn-success w-100" type="submit">Sign In</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                            <!-- end card body -->
-                        </div>
-                        <!-- end card -->
-
-                    </div>
-                </div>
-                <!-- end row -->
-            </div>
-            <!-- end container -->
-        </div>
-        <!-- end auth page content -->
-
-        <!-- footer -->
-        <footer class="footer start-0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <p class="mb-0 text-muted">&copy;
-                                <script>document.write(new Date().getFullYear())</script>
-                                MiaCargoPost
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <!-- end Footer -->
     </div>
-    <!-- end auth-page-wrapper -->
 
-    {{ include('partials/vendor-scripts.html.twig') }}
+    <!-- auth page content -->
+    <div class="auth-page-content">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-4">
+                    <div class="card" style="margin-top: 8rem">
+
+                        <div class="card-body p-4">
+                            <div class="p-2">
+
+                                {% if error %}
+                                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                {% endif %}
+
+                                <form action="{{ path('app_login') }}" method="post">
+
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Usuario</label>
+                                        <input type="text" class="form-control" name="_username" id="username" autofocus
+                                            autocomplete="off" placeholder="Ingrese usuario"
+                                            value="{{ last_username }}">
+                                    </div>
+
+                                    <div class="mb-3">
+                                        <label class="form-label" for="password-input">Contraseña</label>
+                                        <div class="position-relative auth-pass-inputgroup mb-3">
+                                            <input type="password" class="form-control pe-5 password-input"
+                                                placeholder="Ingrese contraseña" id="password-input" name="_password">
+                                            <button
+                                                class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
+                                                type="button" id="password-addon"><i
+                                                    class="ri-eye-fill align-middle"></i></button>
+                                        </div>
+                                    </div>
+
+                                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                                    <div class="mt-4">
+                                        <button class="btn btn-success w-100" type="submit">Iniciar sesión</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <!-- end card body -->
+                    </div>
+                    <!-- end card -->
+
+                </div>
+            </div>
+            <!-- end row -->
+        </div>
+        <!-- end container -->
+    </div>
+    <!-- end auth page content -->
+
+    <!-- footer -->
+    <footer class="footer start-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-center">
+                        <p class="mb-0 text-muted">&copy;
+                            <script>document.write(new Date().getFullYear())</script>
+                            MiaCargoPost
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end Footer -->
+</div>
+<!-- end auth-page-wrapper -->
+
+{{ include('partials/vendor-scripts.html.twig') }}
 
 {% endblock %}
 
 {% block javascripts %}
 
-    <!-- particles js -->
-    <script src="{{ asset('libs/particles.js/particles.js') }}"></script>
-    <!-- particles app js -->
-    <script src="{{ asset('js/pages/particles.app.js') }}"></script>
-    <!-- password create init -->
-    <script src="{{ asset('js/pages/password-addon.init.js') }}"></script>
+<!-- particles js -->
+<script src="{{ asset('libs/particles.js/particles.js') }}"></script>
+<!-- particles app js -->
+<script src="{{ asset('js/pages/particles.app.js') }}"></script>
+<!-- password create init -->
+<script src="{{ asset('js/pages/password-addon.init.js') }}"></script>
 
 {% endblock %}
