--- a/templates/secure/default/index.html.twig
+++ b/templates/secure/default/index.html.twig
@@ -23,7 +23,7 @@
                     <div class="col-12">
                         <div class="d-flex align-items-lg-center flex-lg-row flex-column">
                             <div class="flex-grow-1">
-                                <h4 class="fs-16 mb-1">Home</h4>
+                                <h4 class="fs-16 mb-1">Inicio</h4>
                             </div>
                         </div>
                     </div>
@@ -40,12 +40,14 @@
                                                     <div>
                                                         <p
                                                             class="text-uppercase fw-medium text-muted text-truncate mb-0 mt-2">
-                                                            Addresses
+                                                            Direcciones
                                                         </p>
                                                         <p class="mt-2 text-muted">
-                                                            The Address/Standardization verify, which corrects errors in
-                                                            street addresses, including abbreviations and missing
-                                                            information, and supplies ZIP Codes and ZIP Codes + 4.
+                                                            Verificación de Dirección/Estandarización, que corrige
+                                                            errores en
+                                                            direcciones de calles, incluyendo abreviaturas e información
+                                                            faltante, y proporciona Códigos Postales y Códigos Postales
+                                                            + 4.
                                                         </p>
                                                     </div>
                                                     <div class="mt-4">
@@ -66,15 +68,14 @@
                                                     <div>
                                                         <p
                                                             class="text-uppercase fw-medium text-muted text-truncate mb-0 mt-2">
-                                                            Domestic Prices
+                                                            Precios locales
                                                         </p>
                                                         <p class="mt-2 text-muted">
-                                                            This provides Domestic USPS product pricing based on the
-                                                            characteristics of what is being shipped for Parcel Select,
-                                                            Parcel Select Lightweight, Priority Mail, Priority Mail
-                                                            Express,
-                                                            First Class Package Services, Library Mail, Media Mail, and
-                                                            Bound Printed Matter.
+                                                            Aquí se proporcionan precios de productos nacionales de USPS
+                                                            según las características de lo que se envía para Parcel
+                                                            Select, Parcel Select Lightweight, Priority Mail, Priority
+                                                            Mail Express, First Class Package Services, Library Mail,
+                                                            Media Mail y Bound Printed Matter.
                                                         </p>
                                                     </div>
                                                     <div class="mt-4">
@@ -95,13 +96,12 @@
                                                     <div>
                                                         <p
                                                             class="text-uppercase fw-medium text-muted text-truncate mb-0 mt-2">
-                                                            Tracking
+                                                            Seguimiento
                                                         </p>
                                                         <p class="mt-2 text-muted">
-                                                            This returns tracking status and related details for a given
-                                                            USPS package, including scan events and their date, time,
-                                                            and
-                                                            location.
+                                                            Esto devuelve el estado de seguimiento y los detalles
+                                                            relacionados para un paquete de USPS determinado, incluidos
+                                                            los eventos de escaneo y su fecha, hora y ubicación.
                                                         </p>
                                                     </div>
                                                     <div class="mt-4">
