--- a/templates/login/auth-signin-cover.html.twig
+++ b/templates/login/auth-signin-cover.html.twig
@@ -2,111 +2,112 @@
 
 {% block body %}
 
-    <!-- auth-page wrapper -->
-    <div class="auth-page-wrapper auth-bg-cover py-5 d-flex justify-content-center align-items-center min-vh-100">
-        <div class="bg-overlay"></div>
-        <!-- auth-page content -->
-        <div class="auth-page-content overflow-hidden pt-lg-5">
-            <div class="container px-22">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="card overflow-hidden">
-                            <div class="row g-0">
-                                <div class="col-lg-12">
-                                    <div class="p-lg-5 p-4">
-                                     <div class="logo-lg d-flex justify-content-center align-items-center p-4">
-                            <img src="{{ asset('images/logo-final.png') }}" alt="" height="40">
-                            
-                        </div>
-                                        <div>
-                                            <h5 class="text-primary">Welcome</h5>
-                                            <p class="text-muted">Sign in to continue working</p>
-                                        </div>
+<!-- auth-page wrapper -->
+<div class="auth-page-wrapper auth-bg-cover py-5 d-flex justify-content-center align-items-center min-vh-100">
+    <div class="bg-overlay"></div>
+    <!-- auth-page content -->
+    <div class="auth-page-content overflow-hidden pt-lg-5">
+        <div class="container px-22">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card overflow-hidden">
+                        <div class="row g-0">
+                            <div class="col-lg-12">
+                                <div class="p-lg-5 p-4">
+                                    <div class="logo-lg d-flex justify-content-center align-items-center p-4">
+                                        <img src="{{ asset('images/logo-final.png') }}" alt="" height="40">
 
-                                        {% if error %}
-                                            <div class="alert alert-danger alert-label-icon alert-dismissible fade show" role="alert">
-                                                <i class="ri-error-warning-line label-icon"></i>
-                                                {{ error.messageKey|trans(error.messageData, 'security') }}
-                                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+                                    <div class="text-center">
+                                        <h5 class="text-primary">Bienvenido</h5>
+                                        <p class="text-muted">Inicie sesión para continuar trabajando</p>
+                                    </div>
+
+                                    {% if error %}
+                                    <div class="alert alert-danger alert-label-icon alert-dismissible fade show"
+                                        role="alert">
+                                        <i class="ri-error-warning-line label-icon"></i>
+                                        {{ error.messageKey|trans(error.messageData, 'security') }}
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    {% endif %}
+
+                                    <div class="mt-4">
+                                        <form action="{{ path('app_login') }}" method="post">
+
+                                            <div class="mb-3">
+                                                <label for="username" class="form-label">Usuario</label>
+                                                <input type="text" class="form-control" name="_username" id="username"
+                                                    autofocus autocomplete="off" placeholder="Ingrese usuario"
+                                                    value="{{ last_username }}">
                                             </div>
-                                        {% endif %}
 
-                                        <div class="mt-4">
-                                            <form action="{{ path('app_login') }}" method="post">
-
-                                                <div class="mb-3">
-                                                    <label for="username" class="form-label">Username</label>
-                                                    <input type="text" class="form-control" name="_username" id="username"
-                                                           autofocus autocomplete="off" placeholder="Enter yor username"
-                                                           value="{{ last_username }}">
+                                            <div class="mb-3">
+                                                <label class="form-label" for="password-input">Contraseña</label>
+                                                <div class="position-relative auth-pass-inputgroup mb-3">
+                                                    <input type="password" class="form-control pe-5 password-input"
+                                                        placeholder="Ingrese contraseña" id="password-input"
+                                                        name="_password">
+                                                    <button
+                                                        class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
+                                                        type="button" id="password-addon"><i
+                                                            class="ri-eye-fill align-middle"></i></button>
                                                 </div>
+                                            </div>
 
-                                                <div class="mb-3">
-                                                    <div class="float-end">
-                                                        <a href="#" class="text-muted">Forgot your password?</a>
-                                                    </div>
-                                                    <label class="form-label" for="password-input">Password</label>
-                                                    <div class="position-relative auth-pass-inputgroup mb-3">
-                                                        <input type="password" class="form-control pe-5 password-input"
-                                                               placeholder="Enter your password" id="password-input"
-                                                               name="_password">
-                                                        <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
-                                                                type="button" id="password-addon"><i
-                                                                    class="ri-eye-fill align-middle"></i></button>
-                                                    </div>
-                                                </div>
+                                            <input type="hidden" name="_csrf_token"
+                                                value="{{ csrf_token('authenticate') }}">
 
-                                                <input type="hidden" name="_csrf_token"
-                                                       value="{{ csrf_token('authenticate') }}">
+                                            <div class="mt-4">
+                                                <button class="btn btn-success w-100" type="submit">Iniciar
+                                                    sesión</button>
+                                            </div>
 
-                                                <div class="mt-4">
-                                                    <button class="btn btn-success w-100" type="submit">Log in</button>
-                                                </div>
-
-                                            </form>
-                                        </div>
+                                        </form>
                                     </div>
                                 </div>
-                                <!-- end col -->
                             </div>
-                            <!-- end row -->
+                            <!-- end col -->
                         </div>
-                        <!-- end card -->
+                        <!-- end row -->
                     </div>
-                    <!-- end col -->
-
+                    <!-- end card -->
                 </div>
-                <!-- end row -->
+                <!-- end col -->
+
             </div>
-            <!-- end container -->
+            <!-- end row -->
         </div>
-        <!-- end auth page content -->
+        <!-- end container -->
+    </div>
+    <!-- end auth page content -->
 
-        <!-- footer -->
-        <footer class="footer start-0">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="text-center">
-                            <p class="mb-0">&copy;
-                                <script>document.write(new Date().getFullYear())</script> MiaCargoPost
-                            </p>
-                        </div>
+    <!-- footer -->
+    <footer class="footer start-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-center">
+                        <p class="mb-0">&copy;
+                            <script>document.write(new Date().getFullYear())</script> MiaCargoPost
+                        </p>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- end Footer -->
-    </div>
-    <!-- end auth-page-wrapper -->
+        </div>
+    </footer>
+    <!-- end Footer -->
+</div>
+<!-- end auth-page-wrapper -->
 
-    {{ include('partials/vendor-scripts.html.twig') }}
+{{ include('partials/vendor-scripts.html.twig') }}
 
 {% endblock %}
 
 {% block javascripts %}
 
-    <!-- password create init -->
-    <script src="{{ asset('js/pages/password-addon.init.js') }}"></script>
+<!-- password create init -->
+<script src="{{ asset('js/pages/password-addon.init.js') }}"></script>
 
 {% endblock %}
